--- a/index.html
+++ b/index.html
@@ -14,3 +14,46 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
   <![endif]-->
 </head>
+<header class="luncher-header">
+    <img src ="#" alt="luncher-logo">
+    <h1>Luncher</h1>
+    <p>A project to give every student a lunch, no matter what the situation</p>
+</header>
+<body>
+<!-- start of nav -->
+    <section class="nav">
+    <ul class="nav-bar">
+        <li href="index.html">Home</li>
+        <li href="#">About</li>
+        <li href="#">Schools</li>
+        <li href="#">Login/Sign Up</li>
+    </ul>
+    <ul class="nav-footer">
+        <li>Facebook</li>
+        <li href="https://github.com/build-week-luncher-team-harry">GitHub</li>
+        <li href="#">Sign Up</li>
+    </ul>
+</section>
+<!-- end of nav bar -->
+
+<section class ="main-body">
+     <div>
+        <h2>What we do</h2>
+             <p>Learn when to stop. We'll make some happy little bushes here. If you do too much it's going to lose its effectiveness. Let's build some happy little clouds up here. We don't want to set these clouds on fire.
+                 I can't think of anything more rewarding than being able to express yourself to others through painting. If you don't like it - change it. It's your world. You can create anything that makes you happy. Absolutely no pressure. You are just a whisper floating across a mountain.</p>
+        <button href="#">Click Here to Donate!</button>        
+    
+     </div>
+     <div>
+         <h2>Testimonials</h2>
+<!-- carousel -->
+
+        <!-- JS for function -->
+     
+     </div>
+
+</section>
+<footer>
+    <p>&copy Luncher 2019</p>
+</footer>
+</body>
