HTML added test and donation div for counter

--- a/index.html
+++ b/index.html
@@ -47,9 +47,14 @@
      <div>
          <h2>Testimonials</h2>
 <!-- carousel -->
+            <p>God gave you this gift of imagination. Use it. It's a super day, so why not make a beautiful sky? Every day I learn. Those great big fluffy clouds. Very easy to work these to death. If you overwork it you become a cloud killer. There's nothing worse than a cloud killer.</p>
+            <p>God gave you this gift of imagination. Use it. It's a super day, so why not make a beautiful sky? Every day I learn. Those great big fluffy clouds. Very easy to work these to death. If you overwork it you become a cloud killer. There's nothing worse than a cloud killer.</p>
+            <p>God gave you this gift of imagination. Use it. It's a super day, so why not make a beautiful sky? Every day I learn. Those great big fluffy clouds. Very easy to work these to death. If you overwork it you become a cloud killer. There's nothing worse than a cloud killer.</p>
+     </div>
 
-        <!-- JS for function -->
-     
+     <div>
+         <h2>Look How Much People Have Already Donated!</h2>
+          
      </div>
 
 </section>
@@ -57,3 +62,4 @@
     <p>&copy Luncher 2019</p>
 </footer>
 </body>
+
