forgot about anchor tags

--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
 <!-- start of nav -->
     <section class="nav">
     <ul class="nav-bar">
-        <li href="index.html">Home</li>
-        <li href="#">About</li>
-        <li href="#">Schools</li>
-        <li href="#">Login/Sign Up</li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Schools</a></li>
+        <li><a href="#">Login/Sign Up</a></li>
     </ul>
     <ul class="nav-footer">
-        <li>Facebook</li>
-        <li href="https://github.com/build-week-luncher-team-harry">GitHub</li>
-        <li href="#">Sign Up</li>
+        <li><a>Facebook</a></li> <!--will have to decide what buttons we want in nav footer-->
+        <li><a href="https://github.com/build-week-luncher-team-harry">GitHub</a></li>
+        <li><a href="#">Sign Up</a></li>
     </ul>
 </section>
 <!-- end of nav bar -->
