donation button place holder

--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
 
      <div>
          <h2>Look How Much People Have Already Donated!</h2>
-          
+          <button>Holder for the Donation Counter</button>
+          <!-- will come back to figure out how we want to style this counter -->
      </div>
 
 </section>
