added img holder for main img

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <img src ="#" alt="luncher-logo">
     <h1>Luncher</h1>
     <p>A project to give every student a lunch, no matter what the situation</p>
+    <img src="#" alt="main-lunchbox-img">
 </header>
 <body>
 <!-- start of nav -->
