--- a/index.html
+++ b/index.html
@@ -15,27 +15,34 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
   <![endif]-->
 </head>
-<header class="luncher-header">
-    <img src ="#" alt="luncher-logo">
-    <h1>Luncher</h1>
-    <p>A project to give every student a lunch, no matter what the situation</p>
-    <img src="#" alt="main-lunchbox-img">
-</header>
 <body>
 <!-- start of nav -->
-    <section class="nav">
+<section class="nav">
     <ul class="nav-bar">
         <li><a href="index.html">Home</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Schools</a></li>
         <li><a href="#">Login/Sign Up</a></li>
     </ul>
+
+ <img src ="#" alt="luncher-logo" class="logo-img">
+    
     <ul class="nav-footer">
         <li><a>Facebook</a></li> <!--will have to decide what buttons we want in nav footer-->
         <li><a href="https://github.com/build-week-luncher-team-harry">GitHub</a></li>
         <li><a href="#">Sign Up</a></li>
     </ul>
+
 </section>
+
+<header class="luncher-header">
+    
+<h1>Luncher</h1>
+    <p>A project to give every student a lunch, no matter what the situation</p>
+        <img src="#" alt="main-lunchbox-img">
+
+</header>
+
 <!-- end of nav bar -->
 
 <section class ="main-body">
