--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
 
 
 <section class ="main-body">
-     <div>
+     <div class="form-box">
         <h2>What we do</h2>
              <p>Learn when to stop. We'll make some happy little bushes here. If you do too much it's going to lose its effectiveness. Let's build some happy little clouds up here. We don't want to set these clouds on fire.
                  I can't think of anything more rewarding than being able to express yourself to others through painting. If you don't like it - change it. It's your world. You can create anything that makes you happy. Absolutely no pressure. You are just a whisper floating across a mountain.</p>
-        
-        
+             </div>
+        <div>
         <form class="donation-form">
          <p>
               <label>First name</label>
