updated logo and changed nav bar color

--- a/index.html
+++ b/index.html
@@ -32,12 +32,11 @@
 <!-- end of nav bar -->
 <header class="luncher-header">
    <div class="slogan">
-<h1>Luncher</h1>
-    <p>A project to give every student a lunch, no matter what the situation</p>
-     
-    
-    <!-- <img src="images/back-to-school.jpg" alt="main-lunchbox-img" class="lunchbox"> -->
- </div>  
+<!-- <h1>Luncher</h1> -->
+         <!-- <p>A project to give every student a lunch, no matter what the situation</p> -->
+<img src="images/Luncher-new.png" alt="luncher-logo" class="luncher">
+
+     </div>  
 </header>
 
 
