--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 </section>
 <footer>
         <ul class="nav-footer">
-                <li><a>Facebook</a></li> <!--will have to decide what buttons we want in nav footer-->
+                <li><a href="#">Facebook</a></li> <!--will have to decide what buttons we want in nav footer-->
                 <li><a href="https://github.com/build-week-luncher-team-harry">GitHub</a></li>
                 <li><a href="#">Sign Up</a></li>
             <p>&copy Luncher 2019</p>
