--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 
   <link href="https://fonts.googleapis.com/css?family=Russo+One|Ubuntu" rel="stylesheet">
   <link href="css/index.css" rel="stylesheet">
+  
+<link rel="icon" href="favicon.ico" src="images/luncherFavicon.png">
+
   <script src="js/index.js"></script> 
+
 
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
