--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css?family=Russo+One|Ubuntu" rel="stylesheet">
   <link href="css/index.css" rel="stylesheet">
   
-<link rel="icon" href="favicon.ico" src="images/luncherFavicon.png">
+<link rel="icon" href="images/favicon2.png" src="images/luncherFavicon.png">
 
   <script src="js/index.js"></script> 
 
@@ -24,7 +24,7 @@
 <section class="nav">
     <ul class="nav-bar">
         <li><a href="index.html">Home</a></li>
-        <li><a href="#">About</a></li>
+        <li><a href="about.html">About</a></li>
         <li><a href="#">Schools</a></li>
         <li><a href="#">Login/Sign Up</a></li>
     </ul>
