--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
 
 <section class="test">
      <div>
-         <h2>Testimonials</h2>
-            <p>See what some of our clients and students are saying! </p>
+         <h2>Testimonials:</h2>
+           
       </div>
    
        
