added a function to button and respon to form

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <label>Donation Amount</label>
                 <input type="num" value="number">
             </p>
-            <button href="#">Click Here to Donate!</button> 
+            <button href="#" onclick="changeText(this)" id="button">Click Here to Donate!</button> 
         </form>
     </div>
 </section>
