--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 <link rel="icon" href="images/favicon2.png" src="images/luncherFavicon.png">
 
   <script src="js/index.js"></script> 
-
+  <script src="jquery-3.4.1.min.js"></script>
+<!-- added jquery but it is not currently in use -->
 
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
@@ -111,9 +112,11 @@
 <section>
      <div class="donation">
          <h2>Look How Much People Have Already Donated!</h2>
-          <button>Holder for the Donation Counter</button>
+          <!-- <button>Holder for the Donation Counter</button> -->
           <!-- will come back to figure out how we want to style this counter -->
-          
+          <div id="donations">
+              <div id="bar">$10000</div>
+            </div>
             
      </div>
 
