--- a/index.html
+++ b/index.html
@@ -112,12 +112,13 @@
 <section>
      <div class="donation">
          <h2>Look How Much People Have Already Donated!</h2>
-          <!-- <button>Holder for the Donation Counter</button> -->
+        
+         <!-- <button>Holder for the Donation Counter</button> -->
           <!-- will come back to figure out how we want to style this counter -->
           <div id="donations">
               <div id="bar">$10000</div>
             </div>
-            
+            <button href="#" onclick="changeText(this)" id="button">Click Here to Donate!</button>   
      </div>
 
 </section>
