added photo to About Us page

--- a/about.html
+++ b/about.html
@@ -1,44 +1,68 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <!--Viewport-->
-  <meta name="viewport" content="width=device+width, initial-scale=1">
-  <title>Luncher</title>
+  <head>
+    <meta charset="utf-8" />
+    <!--Viewport-->
+    <meta name="viewport" content="width=device+width, initial-scale=1" />
+    <title>Luncher</title>
 
-  <link href="https://fonts.googleapis.com/css?family=Russo+One|Ubuntu" rel="stylesheet">
-  <link href="css/index.css" rel="stylesheet">
-  
-<link rel="icon" href="favicon.ico" src="images/luncherFavicon.png">
+    <link
+      href="https://fonts.googleapis.com/css?family=Russo+One|Ubuntu"
+      rel="stylesheet"
+    />
+    <link href="css/index.css" rel="stylesheet" />
 
-  <script src="js/index.js"></script> 
+    <link rel="icon" href="favicon.ico" src="images/luncherFavicon.png" />
 
+    <script src="js/index.js"></script>
 
-  <!--[if lt IE 9]>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
-  <![endif]-->
-</head>
-<body>
-<!-- start of nav -->
-<section class="nav">
-    <ul class="nav-bar">
+    <!--[if lt IE 9]>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <!-- start of nav -->
+    <section class="nav">
+      <ul class="nav-bar">
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="#">Schools</a></li>
         <li><a href="#">Login/Sign Up</a></li>
-    </ul>
+      </ul>
 
- <!-- <img src ="#" alt="luncher-logo" class="logo-img"> -->
-    
-    
-</section>
-<!-- end of nav bar -->
-<header class="luncher-header">
-   <div class="slogan">
-<!-- <h1>Luncher</h1> -->
-         <!-- <p>A project to give every student a lunch, no matter what the situation</p> -->
-<img src="images/Luncher-new.png" alt="luncher-logo" class="luncher">
-
-     </div>  
-</header>
+      <!-- <img src ="#" alt="luncher-logo" class="logo-img"> -->
+    </section>
+    <!-- end of nav bar -->
+    <header class="luncher-header">
+      <div class="slogan">
+        <!-- <h1>Luncher</h1> -->
+        <!-- <p>A project to give every student a lunch, no matter what the situation</p> -->
+        <img src="images/Luncher-new.png" alt="luncher-logo" class="luncher" />
+      </div>
+    </header>
+    <main>
+      <h2>Introductions</h2>
+      <section class="first-two">
+        <div>
+        <img class="about-pic" src="images/ALEJ.PNG" alt="Alej's Photo" />
+        <p></p>
+        </div>
+        <div>
+        <img class="about-pic" src="images/NICK.PNG" alt="Nick's Photo" />
+          <p></p>
+        </div>
+      </section>
+      <section class="second-two">
+        <div>
+        <img class="about-pic" src="images/BRIAN.PNG" alt="Brian's Photo" />
+        <p></p>
+        </div>
+        <div>
+        <img class="about-pic" src="images/NASHA.PNG" alt="Nasha's Photo" />
+        <p></p>
+        </div>
+      </section>
+    </main>
+  </body>
+</html>
