added favicon to about page

--- a/about.html
+++ b/about.html
@@ -10,8 +10,7 @@
   <link href="https://fonts.googleapis.com/css?family=Russo+One|Ubuntu" rel="stylesheet">
   <link href="css/index.css" rel="stylesheet">
   
-<link rel="icon" href="favicon.ico" src="images/luncherFavicon.png">
-
+  <link rel="icon" href="images/favicon2.png" src="images/luncherFavicon.png">
   <script src="js/index.js"></script> 
 
 
