--- a/index.html
+++ b/index.html
@@ -48,8 +48,10 @@
 <section class ="main-body">
      <div class="form-box">
         <h2>What we do</h2>
-             <p>Learn when to stop. We'll make some happy little bushes here. If you do too much it's going to lose its effectiveness. Let's build some happy little clouds up here. We don't want to set these clouds on fire.
-                 I can't think of anything more rewarding than being able to express yourself to others through painting. If you don't like it - change it. It's your world. You can create anything that makes you happy. Absolutely no pressure. You are just a whisper floating across a mountain.</p>
+             <p>Luncher is an organization that focuses on providing a lunch for school kids who can not afford the regulated lunch costs. We believe that no child should ever go hungry while at school! Here at Luncher we have dedicated our time to help solve the issue of families not being able to afford the costs of lunch. We also understand that 
+               some families might be going through a tough time, but no child should ever suffer because of that, so we started Luncher!
+               We collect donations and help support fundraising for schools to raise money to enable them to provide children with affordable or free lunch. Please sign up below,
+              help out, and donate to an amazing cause! On behalf of all of our schools, and us at Luncher, we Thank You so much for your donation!</p>
              </div>
             </section>
 <section>
@@ -124,6 +126,7 @@
 
 </section>
 <footer>
+  
         <ul class="nav-footer">
                 <li><a href="#">Facebook</a></li> <!--will have to decide what buttons we want in nav footer-->
                 <li><a href="https://github.com/build-week-luncher-team-harry">GitHub</a></li>
