fixed bottom scroll bar issue

--- a/about.html
+++ b/about.html
@@ -41,3 +41,19 @@
 
      </div>  
 </header>
+<section>
+    
+</section>
+
+<footer>
+  
+        <ul class="nav-footer">
+                <li><a href="#">Facebook</a></li> <!--will have to decide what buttons we want in nav footer-->
+                <li><a href="https://github.com/build-week-luncher-team-harry">GitHub</a></li>
+                <li><a href="#">Sign Up</a></li>
+            <p>&copy Luncher 2019</p>
+            </ul>
+        
+</footer>
+</body>
+</html>
