--- a/index.html
+++ b/index.html
@@ -59,23 +59,23 @@
         <form class="donation-form" >
          <p>
               <label>First name</label>
-              <input type="text" value="your first name..." >
+              <input type="text" placeholder="your first name..." >
             </p>
             <p>
               <label>Last name</label>
-              <input type="text" value="your last name..." >
+              <input type="text" placeholder="your last name..." >
             </p>
             <p>
               <label>Email</label>
-              <input type="email" value="your email..." >
+              <input type="email" placeholder="your email..." >
             </p>
             <p>
               <label>Phone number</label>
-              <input type="tel" value="your phone...">
+              <input type="tel" placeholder="your phone...">
             </p>
             <p>
                 <label>Donation Amount</label>
-                <input type="num" value="donation amount...">
+                <input type="num" placeholder="donation amount...">
             </p>
             <button href="#" onclick="changeText(this)" id="button">Click Here to Donate!</button> 
         </form>
